--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Movies</title>
+  <link href="https://illustoon.com/photo/7627.png" rel="icon">
 
 </head>
 
